# Raku

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
bootloader/: Cargo.toml  linker.ld
bootloader/.cargo/: config.toml
cpu-kernel/: Cargo.toml
cpu-kernel/.cargo/: config.toml
game/: Cargo.toml  linker.ld
game/.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  pic.rs
kernel/src/dev/: mod.rs  reg.rs  vi.rs
kernel/src/dev/rdp/: interface.rs  mod.rs  queue.rs
kernel/src/dev/rdp/commands/: fill_rectangle.rs  full_sync.rs  mod.rs  set_color_image.rs  set_fill_color.rs  set_other_modes.rs  set_scissor.rs
lib-kernel/: Cargo.toml
lib-kernel/.cargo/: config.toml
lib-kernel/src/: lib.rs
rcp-kernel/: Cargo.toml
rcp-kernel/.cargo/: config.toml
scripts/: assemble-rom.sh  build-release.sh  build.sh  extend-boot-section.py  generate-rom-header.py
targets/: mips-ultra64-cpu.json  mips-ultra64-rcp.json
