[workspace]
resolver = "2"
members = [
    "lib-kernel",
    "rcp-kernel",
    "cpu-kernel",
    "bootloader",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0+"
repository = "https://github.com/xSetech/Raku"
authors = [
    "Seth Junot <xsetech@gmail.com>",
]

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
