[package]
name = "rcp-kernel"
description = "(Summer) Kernel that runs on the RCP"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "rcp-kernel"
path = "src/bin/main.rs"

[dependencies]
lib-kernel = { path = "../lib-kernel" }
